--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,11 @@
     <!-- fontawesome -->
     
     <script src="https://kit.fontawesome.com/0f83e5d3b7.js" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+      $('.js-scroll-trigger').click(function(){
+        $('.navbar-collapse').collapse('hiden');
+      });
+    </script>
 
     <!-- video-react -->
 
@@ -55,5 +60,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
   </body>
 </html>
